[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/dialogs/settings_dialog/InputEventPopup.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/dialogs/settings_dialog/ColorBlindnessMode.gd" type="Script" id=2]
[ext_resource path="res://UI/dialogs/settings_dialog/UserInterfaceSize.gd" type="Script" id=3]
[ext_resource path="res://UI/dialogs/settings_dialog/CardPreview.gd" type="Script" id=4]
[ext_resource path="res://UI/dialogs/settings_dialog/GamePlay.gd" type="Script" id=5]
[ext_resource path="res://UI/dialogs/settings_dialog/SettingsTabContainer.gd" type="Script" id=6]
[ext_resource path="res://UI/dialogs/settings_dialog/DisplayMode.gd" type="Script" id=7]
[ext_resource path="res://UI/dialogs/settings_dialog/Resolution.gd" type="Script" id=8]
[ext_resource path="res://UI/dialogs/settings_dialog/Language.gd" type="Script" id=9]
[ext_resource path="res://UI/dialogs/settings_dialog/GameSpeed.gd" type="Script" id=10]
[ext_resource path="res://addons/GGS/src/components/slider/ggsSlider.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/GGS/src/components/boolean/ggsBool.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/GGS/src/components/option_list/ggsOptionList.tscn" type="PackedScene" id=13]
[ext_resource path="res://UI/Themes/theme_dark.tres" type="Theme" id=14]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="SettingsDialog" type="WindowDialog"]
margin_right = 400.0
margin_bottom = 250.0
rect_min_size = Vector2( 520, 350 )
theme = ExtResource( 14 )
window_title = "SETTINGS_TITLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 508.0
margin_bottom = 338.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Control" parent="MarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="Master" type="HBoxContainer" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Audio/VBoxContainer/Master"]
margin_right = 392.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "AUDIO_MASTER"

[node name="ggsSlider" parent="MarginContainer/TabContainer/Audio/VBoxContainer/Master" instance=ExtResource( 11 )]
margin_left = 396.0
margin_right = 496.0
margin_bottom = 12.0

[node name="Music" type="HBoxContainer" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
margin_top = 37.0
margin_right = 496.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Audio/VBoxContainer/Music"]
margin_right = 392.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "AUDIO_MUSIC"

[node name="ggsSlider" parent="MarginContainer/TabContainer/Audio/VBoxContainer/Music" instance=ExtResource( 11 )]
margin_left = 396.0
margin_right = 496.0
margin_bottom = 12.0
setting_index = 1

[node name="SFX" type="HBoxContainer" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
margin_top = 58.0
margin_right = 496.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Audio/VBoxContainer/SFX"]
margin_right = 392.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "AUDIO_SFX"

[node name="ggsSlider" parent="MarginContainer/TabContainer/Audio/VBoxContainer/SFX" instance=ExtResource( 11 )]
margin_left = 396.0
margin_right = 496.0
margin_bottom = 12.0
setting_index = 2

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/TabContainer/Audio/VBoxContainer"]
margin_top = 79.0
margin_right = 496.0
margin_bottom = 91.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="Graphics" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Graphics"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/Graphics/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="ImageQuality" type="HBoxContainer" parent="MarginContainer/TabContainer/Graphics/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Graphics/VBoxContainer/ImageQuality"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "IMAGE_QUALITY"

[node name="ggsBool" parent="MarginContainer/TabContainer/Graphics/VBoxContainer/ImageQuality" instance=ExtResource( 12 )]
margin_left = 420.0
margin_right = 496.0
setting_index = 3

[node name="Resolution" type="HBoxContainer" parent="MarginContainer/TabContainer/Graphics/VBoxContainer"]
margin_top = 60.0
margin_right = 496.0
margin_bottom = 85.0
size_flags_horizontal = 3
script = ExtResource( 8 )

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Graphics/VBoxContainer/Resolution"]
margin_top = 4.0
margin_right = 427.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "RESOLUTION"

[node name="ggsOptionList" parent="MarginContainer/TabContainer/Graphics/VBoxContainer/Resolution" instance=ExtResource( 13 )]
margin_left = 431.0
margin_right = 496.0
margin_bottom = 25.0
setting_index = 4

[node name="DisplayMode" type="HBoxContainer" parent="MarginContainer/TabContainer/Graphics/VBoxContainer"]
margin_top = 89.0
margin_right = 496.0
margin_bottom = 114.0
size_flags_horizontal = 3
script = ExtResource( 7 )

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Graphics/VBoxContainer/DisplayMode"]
margin_top = 4.0
margin_right = 427.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "DISPLAY_MODE"

[node name="ggsOptionList" parent="MarginContainer/TabContainer/Graphics/VBoxContainer/DisplayMode" instance=ExtResource( 13 )]
margin_left = 431.0
margin_right = 496.0
margin_bottom = 25.0
setting_index = 5

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/TabContainer/Graphics/VBoxContainer"]
margin_top = 118.0
margin_right = 496.0
margin_bottom = 130.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="GamePlay" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0
script = ExtResource( 5 )
setting_index = 18

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/GamePlay"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="GameSpeed" type="HBoxContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 41.0
size_flags_horizontal = 3
script = ExtResource( 10 )

[node name="Label" type="Label" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/GameSpeed"]
margin_top = 4.0
margin_right = 427.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "GAME_SPEED"

[node name="ggsOptionList" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/GameSpeed" instance=ExtResource( 13 )]
margin_left = 431.0
margin_right = 496.0
margin_bottom = 25.0
setting_index = 6

[node name="BattlePreview" type="HBoxContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 45.0
margin_right = 496.0
margin_bottom = 85.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/BattlePreview"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "BATTLE_PREVIEW"

[node name="ggsBool" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/BattlePreview" instance=ExtResource( 12 )]
margin_left = 420.0
margin_right = 496.0
setting_index = 7

[node name="FacncyMovement" type="HBoxContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 89.0
margin_right = 496.0
margin_bottom = 129.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/FacncyMovement"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "FANCY_MOVEMENT"

[node name="ggsBool" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/FacncyMovement" instance=ExtResource( 12 )]
margin_left = 420.0
margin_right = 496.0
setting_index = 8

[node name="OvalHandShape" type="HBoxContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 133.0
margin_right = 496.0
margin_bottom = 173.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/OvalHandShape"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "OVAL_HAND_SHAPE"

[node name="ggsBool" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/OvalHandShape" instance=ExtResource( 12 )]
margin_left = 420.0
margin_right = 496.0
setting_index = 9

[node name="CardPreview" type="HBoxContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 177.0
margin_right = 496.0
margin_bottom = 202.0
size_flags_horizontal = 3
script = ExtResource( 4 )

[node name="Label" type="Label" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/CardPreview"]
margin_top = 4.0
margin_right = 427.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "CARD_PREVIEW"

[node name="ggsOptionList" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/CardPreview" instance=ExtResource( 13 )]
margin_left = 431.0
margin_right = 496.0
margin_bottom = 25.0
setting_index = 10

[node name="UseDebug" type="HBoxContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 206.0
margin_right = 496.0
margin_bottom = 246.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/UseDebug"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "USE_DEBUG"

[node name="ggsBool" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/UseDebug" instance=ExtResource( 12 )]
margin_left = 420.0
margin_right = 496.0
setting_index = 11

[node name="ShortcutKey" type="HBoxContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 250.0
margin_right = 496.0
margin_bottom = 275.0
size_flags_horizontal = 3

[node name="ToggleButton" type="Button" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKey"]
margin_right = 21.0
margin_bottom = 25.0
toggle_mode = true
text = "+"
flat = true

[node name="Label" type="Label" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKey"]
margin_left = 25.0
margin_top = 4.0
margin_right = 332.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SHORTCUT_KEY"

[node name="ResetButton" type="Button" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKey"]
margin_left = 336.0
margin_right = 496.0
margin_bottom = 25.0
text = "RESET_SHORTCUT_KEY"

[node name="ShortcutKeyContainer" type="ScrollContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 279.0
margin_right = 496.0
margin_bottom = 379.0
rect_min_size = Vector2( 0, 100 )

[node name="ShortcutKeyBoxList" type="VBoxContainer" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKeyContainer"]
margin_right = 496.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKeyContainer/ShortcutKeyBoxList"]
margin_right = 496.0
margin_bottom = 17.0
text = "1111"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/TabContainer/GamePlay/VBoxContainer"]
margin_top = 383.0
margin_right = 496.0
margin_bottom = 395.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="Popup" parent="MarginContainer/TabContainer/GamePlay" instance=ExtResource( 1 )]

[node name="ExtraFeatures" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/ExtraFeatures"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="Use2d" type="HBoxContainer" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/Use2d"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "USE_2D"

[node name="ggsBool" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/Use2d" instance=ExtResource( 12 )]
setting_index = 12

[node name="CameraShake" type="HBoxContainer" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer"]
margin_top = 60.0
margin_right = 496.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/CameraShake"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "CAMERA_SHAKE"

[node name="ggsBool" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/CameraShake" instance=ExtResource( 12 )]
setting_index = 13

[node name="ColorBlindnessMode" type="HBoxContainer" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer"]
margin_top = 104.0
margin_right = 496.0
margin_bottom = 129.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="Label" type="Label" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/ColorBlindnessMode"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "COLOR_BLINDNESS_MODE"

[node name="ggsOptionList" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/ColorBlindnessMode" instance=ExtResource( 13 )]
setting_index = 14

[node name="UserInterfaceSize" type="HBoxContainer" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer"]
margin_top = 133.0
margin_right = 496.0
margin_bottom = 158.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="Label" type="Label" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/UserInterfaceSize"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "USER_INTERFACE_SIZE"

[node name="ggsOptionList" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer/UserInterfaceSize" instance=ExtResource( 13 )]
setting_index = 15

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/TabContainer/ExtraFeatures/VBoxContainer"]
margin_top = 162.0
margin_right = 496.0
margin_bottom = 174.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="Other" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TabContainer/Other"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/TabContainer/Other/VBoxContainer"]
margin_right = 496.0
margin_bottom = 12.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[node name="Language" type="HBoxContainer" parent="MarginContainer/TabContainer/Other/VBoxContainer"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 41.0
size_flags_horizontal = 3
script = ExtResource( 9 )

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Other/VBoxContainer/Language"]
margin_top = 4.0
margin_right = 246.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "LANGUAGE"

[node name="ggsOptionList" parent="MarginContainer/TabContainer/Other/VBoxContainer/Language" instance=ExtResource( 13 )]
setting_index = 16

[node name="HidePlayerName" type="HBoxContainer" parent="MarginContainer/TabContainer/Other/VBoxContainer"]
margin_top = 45.0
margin_right = 496.0
margin_bottom = 85.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Other/VBoxContainer/HidePlayerName"]
margin_top = 11.0
margin_right = 416.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "HIDE_PLAYER_NAME"

[node name="ggsBool" parent="MarginContainer/TabContainer/Other/VBoxContainer/HidePlayerName" instance=ExtResource( 12 )]
setting_index = 17

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/TabContainer/Other/VBoxContainer"]
margin_top = 89.0
margin_right = 496.0
margin_bottom = 101.0
custom_constants/separation = 12
custom_styles/separator = SubResource( 1 )

[connection signal="toggled" from="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKey/ToggleButton" to="MarginContainer/TabContainer/GamePlay" method="_shortcut_key_container_toggle_button_toggled"]
[connection signal="pressed" from="MarginContainer/TabContainer/GamePlay/VBoxContainer/ShortcutKey/ResetButton" to="MarginContainer/TabContainer/GamePlay" method="_shortcut_key_container_reset_button_toggled"]
